log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 11:02:27 PM UTC: 
 arraylist.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
fe12a8a
Thu 30 Mar 2023 11:02:49 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8666f2a
Thu 30 Mar 2023 11:03:07 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 10/70
8b0361e
Thu 30 Mar 2023 11:09:41 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
0b5e488
Thu 30 Mar 2023 11:10:01 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
030e9b7
Thu 30 Mar 2023 11:10:36 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
997efbf
Thu 30 Mar 2023 11:10:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
ecf73f5
Thu 30 Mar 2023 11:18:29 PM UTC: 
 arraylist.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
72b3722
Fri 31 Mar 2023 12:47:50 AM UTC: 
 arraylist.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 20/70
721ed25
Fri 31 Mar 2023 01:06:25 AM UTC: 
 arraylist.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
69fd0d5
Fri 31 Mar 2023 01:06:38 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 20/70
195a180
Fri 31 Mar 2023 01:07:21 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 30/70
1d7ff4b
Fri 31 Mar 2023 01:08:08 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:48:9: error: statement with no effect [-Werror=unused-value]
   48 |   for (l->size; l->size > i; l->size--)
      |        ~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
29109f2
Fri 31 Mar 2023 01:09:16 AM UTC: 
 arraylist.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:48:9: error: statement with no effect [-Werror=unused-value]
   48 |   for (l->size; l->size > i; l->size--)
      |        ~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
1c21358
Fri 31 Mar 2023 05:15:42 PM UTC: 
 arraylist.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:48:9: error: statement with no effect [-Werror=unused-value]
   48 |   for (l->size; l->size >= i; l->size--)
      |        ~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e01cd29
Fri 31 Mar 2023 05:15:57 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
4882346
Fri 31 Mar 2023 05:17:47 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 30/70
29d0a2f
Fri 31 Mar 2023 05:21:53 PM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f2544f0
Fri 31 Mar 2023 05:22:45 PM UTC: 
 arraylist.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3917beb
Fri 31 Mar 2023 05:23:45 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:64:27: error: expected expression before ‘]’ token
   64 |   if(i>=0) return l->data[];
      |                           ^
arraylist.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ac3ab61
Fri 31 Mar 2023 05:24:00 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
2fbb154
Fri 31 Mar 2023 05:24:47 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|2
total_score: 40/70
a81d51d
